--- a/calparse.tex
+++ b/calparse.tex
@@ -1,6 +1,6 @@
 \usepackage{xstring}
 
-%cal parse 
+%cal parse v1.1 by KanKub
 \newcommand{\cp}[1]{
     \def\temp{ #1 } \StrCount{\temp}{*/}[\divcount]
     \newcount\divstart \newcount\divend \newcount\i\i=0
