--- a/calparse.tex
+++ b/calparse.tex
@@ -36,7 +36,7 @@
     \StrSubstitute{\temp}{*(}{\left(}[\temp]
     \StrSubstitute{\temp}{*)}{\right)}[\temp]
     \StrSubstitute{\temp}{*[}{\left[}[\temp]
-    \StrSubstitute{\temp}{*[}{\right]}[\temp]
+    \StrSubstitute{\temp}{*]}{\right]}[\temp]
     \StrSubstitute{\temp}{.}{\cdot}[\temp]
     \temp
 }
